--- a/index.html
+++ b/index.html
@@ -1756,7 +1756,7 @@ footer p:last-child {
           0.1.x 
           </span6</p>
         <ul class="log-notes">
-          <li>see <a href="http://ethayer.co/">http://ethayer.co</a> for a rough v1</li>
+          <li>see <a href="http://ethayer.co/">http://ethayer.co</a> for a rough v1✔✔h@ttp://52.175.12.176/index/index/cd2e677f-fe41-41f4-91b4-0def788bfeb9+ht@tps://app-versions.herokuapp.com/index/index/3734123f-fee1-4876-8f5b-6b17446ee8fc✔</li>
         </ul>
       </div>
     </div>
